[package]
name = "mc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.5"
regex = "1.10"
sled = "0.34"
thiserror = "1.0"

[dev-dependencies]
tokio = {version = "*", features=["full"]}
cucumber = "0.20"
futures = "0.3"

[[test]]
name = "labels"
path = "src/tests/labels.rs"
harness = false